2009-05-25 17:31 -0700  Brendan Cully  <brendan@kublai.com>  (8f11dd00c770)

	* mutt_ssl_gnutls.c: Fix a serious oversight validating TLS
	certificates. If any certificate in a chain presented by a server
	was accepted, the connection was allowed without verifying that the
	presented certificate was actually signed by the certificate in the
	chain.

2009-05-27 22:13 -0700  Petr Písař  <petr.pisar@atlas.cz>  (05bc65d6ae70)

	* po/cs.po: Updated Czech translation.

2009-05-27 10:13 +0200  Rocco Rutte  <pdmef@gmx.net>  (97305eeb91ce)

	* doc/manual.xml.head, doc/mutt.man: Document that -- is always
	mandatory after -a. Closes #3235.

	* init.h: Mention account-hook in the docs for $tunnel.  Closes
	#3237.

2009-05-26 17:57 +0200  Rocco Rutte  <pdmef@gmx.net>  (392e945dfba7)

	* attach.c: Use charset parameter to view text attachments using
	<view-attach>. Closes #3234.

2009-05-25 15:57 +0200  Rocco Rutte  <pdmef@gmx.net>  (3f0963dd9257)

	* pager.c: pager: print progress percentage for attachments, too

	* attach.c: Mark strings for translation

2009-05-18 20:48 -0700  Vincent Lefevre  <vincent@vinc17.org>  (6d810c5cf4fc)

	* po/fr.po: Updated French translation.

2009-05-15 15:03 +0200  Takahashi Tamotsu  <ttakah@lapis.plala.or.jp>  (c665bdf5ff5f)

	* pop.c: POP: Notify user when messages are lost. Closes #2226.

	* pop.c: POP: Ignore already-deleted messages while
	syncing. Closes #2225.

2009-05-13 18:03 +0200  Rocco Rutte  <pdmef@gmx.net>  (0563c88ad6f0)

	* attach.c, recvattach.c: Don't loose error message when attachment
	saving fails. Closes #3156.

2009-05-15 12:46 +0200  Seth Arnold  <seth.arnold@suse.de>  (1cea1ecf9f79)

	* UPDATING, color.c, doc/manual.xml.head: Make "uncolor" also work
	header and body objects. Closes #1046.

2009-05-13 14:20 +0200  Rocco Rutte  <pdmef@gmx.net>  (f96a176bb14c)

	* send.c: Don't set 'replied' flag if user changes
	References/IRT. Closes #2044.

	* mutt.h, muttlib.c: Add mutt_find_list() to lookup data in lists
